--- a/src/Mobile/eShopOnContainers/eShopOnContainers.Windows/eShopOnContainers.Windows.csproj
+++ b/src/Mobile/eShopOnContainers/eShopOnContainers.Windows/eShopOnContainers.Windows.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Controls\TabItem.xaml.cs">
       <DependentUpon>TabItem.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\WebAuthenticationBrokerBrowser.cs" />
     <Compile Include="Converters\TabBadgeColorConverter.cs" />
     <Compile Include="Converters\TabBadgeTextConverter.cs" />
     <Compile Include="Converters\TabIconConverter.cs" />
@@ -121,6 +122,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\CustomTabbedPageRenderer.cs" />
     <Compile Include="Renderers\SlideDownMenuPageRenderer.cs" />
+    <Compile Include="Services\NativeBrowserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
